Do not crash when ejecting an optical device

BUG: 258010

svn path=/trunk/KDE/kdebase/runtime/; revision=1201500